--- a/apps/dmTheme/templates/theme/default/500.html
+++ b/apps/dmTheme/templates/theme/default/500.html
@@ -5,9 +5,9 @@
   <div class="container py-5">
     <div class="row py-5">
       <div class="col text-center py-5">
-        <h1>{% trans 'Erreur interne' %}</h1>
-        <p>{% trans 'Une erreur est survenue, veuillez réessayer plus tard.' %}</p>
-        <p><a href="/">{% trans 'Retour à l\'accueil' %}</a></p>
+        <h1>{% trans 'Error' %}</h1>
+        <p>{% trans 'An error occurred. Sorry.' %}</p>
+        <p><a href="/">{% trans 'Back to home' %}</a></p>
       </div>
     </div>
   </div>
