--- a/apps/dmTheme/templates/theme/default/pages/message-envoye.html
+++ b/apps/dmTheme/templates/theme/default/pages/message-envoye.html
@@ -1,16 +1,16 @@
 {% extends "/app/apps/dmTheme/templates/theme/default/pages/base.html" %}
 {% load i18n %}
 
-{% block title %}{% trans 'Message envoyé !' %}{% endblock %}
+{% block title %}{% trans 'Message Sent!' %}{% endblock %}
 
 {% block main-content %}
 
   <div class="container py-5">
     <div class="row py-5">
       <div class="col-12 py-5 text-center">
-        <h1 class="mb-5">{% trans 'Message envoyé !' %}</h1>
-        <p>{% trans 'Votre message a été envoyé avec succès, <br />nous vous répondrons le plus tôt possible.' %}</p>
-        <p>{% trans 'Merci !' %}</p>
+        <h1 class="mb-5">{% trans 'Message Sent!' %}</h1>
+        <p>{% trans 'Your message has beend successfully sent.' %}</p>
+        <p>{% trans 'Thanks!' %}</p>
       </div>
     </div>
   </div>
