--- a/apps/dmTheme/templates/theme/default/plugins/products-vedette.html
+++ b/apps/dmTheme/templates/theme/default/plugins/products-vedette.html
@@ -68,7 +68,7 @@
             </div>
           {% empty %}
             <div class="text-center">
-              <p>(aucun produit)</p>
+              <p>{% trans 'Empty' %}</p>
             </div>
           {% endfor %}
         </div>
