--- a/apps/dmTheme/templates/theme/default/404.html
+++ b/apps/dmTheme/templates/theme/default/404.html
@@ -5,9 +5,9 @@
   <div class="container py-5">
     <div class="row py-5">
       <div class="col text-center py-5">
-        <h1>{% trans 'Page introuvable' %}</h1>
-        <p>{% trans 'La page que vous cherchez n\'existe pas ou plus.' %}</p>
-        <p><a href="/">{% trans 'Retour à l\'accueil' %}</a></p>
+        <h1>{% trans 'Page not found' %}</h1>
+        <p>{% trans 'This page doesnt exist' %}</p>
+        <p><a href="/">{% trans 'Back to home' %}</a></p>
       </div>
     </div>
   </div>
