--- a/templates/plugins/products-by-category.html
+++ b/templates/plugins/products-by-category.html
@@ -82,7 +82,7 @@
                   </div>
                 {% empty %}
                   <div class="col-12 text-center py-5">
-                    (aucun produit)
+                    {% trans 'Empty' %}
                   </div>
                 {% endfor %}
               </div>
