--- a/apps/dmTheme/templates/theme/default/navbar/navbar.html
+++ b/apps/dmTheme/templates/theme/default/navbar/navbar.html
@@ -10,8 +10,8 @@
         <div class="container">
           <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="/">
-              <img class="logo_dark" src="{% static 'dshop/img/logo-light.png' %}" alt="logo" />
-              <img class="logo_light" src="{% static 'dshop/img/logo-dark.png' %}" alt="logo" />
+              <img class="logo_dark" src="{% static 'dshop/img/logo-dshop.png' %}" alt="logo" />
+              <img class="logo_light" src="{% static 'dshop/img/logo-dshop.png' %}" alt="logo" />
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
               aria-expanded="false">
