--- a/templates/dshop/navbar/topnav.html
+++ b/templates/dshop/navbar/topnav.html
@@ -24,7 +24,7 @@
         <span class="drawer-toggle dm-user" data-dm="user">
           <i class="icon-user"></i>
         </span>
-        <span class="drawer-toggle dm-cart" data-dm="cart">
+        <span id="dshop-toggle-cart" class="drawer-toggle dm-cart" data-dm="cart">
           <i class="icon-basket-loaded"></i>
           <span id="dm-cart-items">0</span>
         </span>
