--- a/templates/dshop/pages/base.html
+++ b/templates/dshop/pages/base.html
@@ -12,11 +12,11 @@
     <meta data-dm="dmodules" data-stage="{% get_setting 'STAGE' %}" />
     {% block main-favicon %}
       <!--Favicons-->
-      <link rel="apple-touch-icon" sizes="180x180" href="{% static 'dshop/icons/apple-touch-icon.png' %}">
-      <link rel="icon" type="image/png" sizes="512x512" href="{% static 'dshop/icons/android-chrome-512x512.png' %}">
-      <link rel="icon" type="image/png" sizes="192x192" href="{% static 'dshop/icons/android-chrome-192x192.png' %}">
-      <link rel="shortcut icon" href="{% static 'dshop/icons/favicon.ico' %}">
-      <link rel="manifest" href="{% static 'dshop/icons/site.webmanifest' %}">
+      <link rel="apple-touch-icon" sizes="180x180" href="{% static 'dshop/icons/apple-touch-icon.png' %}" />
+      <link rel="icon" type="image/png" sizes="512x512" href="{% static 'dshop/icons/android-chrome-512x512.png' %}" />
+      <link rel="icon" type="image/png" sizes="192x192" href="{% static 'dshop/icons/android-chrome-192x192.png' %}" />
+      <link rel="shortcut icon" href="{% static 'dshop/icons/favicon.ico' %}" />
+      <link rel="manifest" href="{% static 'dshop/icons/site.webmanifest' %}" />
     {% endblock main-favicon %}
     {% block main-head %}
       <!-- Fonts -->
@@ -99,7 +99,15 @@
               <div class="col-lg-3 col-md-6 col-sm-12">
                 <div class="widget">
                   <div class="footer_logo">
-                    <a href="/"><img src="{% static 'dshop/img/logo-dark.png' %}" alt="logo" /></a>
+                    <a href="/">
+                        {% dm_get_logos as logos %}
+                        {% if logos %}
+                            {% thumbnail logos.logolight "270x270" upscale as thumb %}
+                            <img src="{{thumb.url}}" alt="logo" />
+                        {% else %}
+                            <img src="{% static 'dshop/img/logo-dshop.png' %}" alt="logo" />
+                        {% endif %}
+                    </a>
                   </div>
                   {% static_placeholder "Footer" %}
                 </div>
