--- a/apps/dmTheme/templates/theme/default/plugins/bloc-infolettre.html
+++ b/apps/dmTheme/templates/theme/default/plugins/bloc-infolettre.html
@@ -16,7 +16,7 @@
         {% endif %}
         <div class="col-md-6">
           <div class="newsletter_form">
-            <form method="post" name="infolettre" action="/contact/infolettre/">
+            <form method="post" name="infolettre" action="/contact/infolettre/mailchimp/">
               {% csrf_token %}
               <input type="text" required="" id="email_infolettre" name="email_infolettre" class="form-control rounded-0" placeholder="{% trans 'Your email' %}" />
               <input type="text" required="" id="calcul_infolettre" name="calcul_infolettre" class="form-control rounded-0" placeholder="4 + 2 = ?" />
