--- a/apps/dmTheme/static/theme/default/css/style.css
+++ b/apps/dmTheme/static/theme/default/css/style.css
@@ -141,6 +141,16 @@ a:hover{
   background-color: #f7f8fb;
 }
 
+/* ===--- Marques ---=== */
+.section-products-brands {
+    padding: 3rem 0;
+}
+.section-products-brands .owl-item .brand img {
+    width: auto;
+    max-height: 100px;
+    margin: 0 auto;
+}
+
 /* ===--- Vos commandes ---=== */
 .text-primary{
   color:#458d91!important;
