update reset password

--- a/templates/dshop/pages/drawer-user.html
+++ b/templates/dshop/pages/drawer-user.html
@@ -38,6 +38,7 @@
           <input id="dm-drawer-form-login-password" name="password" placeholder="{% trans 'Password' %}" type="password" class="default-input" />
           <div class="dm-drawer-logs-login-error" style="display:none;"></div>
         </form>
+        <a href="/commande/password/reset/" class="mb-3 d-block">Récupérer le mot de passe</a>
         <a href="/" class="btn btn-fill-out btn-addtocart" onclick="return dmDrawerDoLogin()">{% trans 'Log In' %}</a>
       </div>
       <div class="dm-drawer-logs-register">
