--- a/apps/dmTheme/templates/theme/default/email/password-reset-body.html
+++ b/apps/dmTheme/templates/theme/default/email/password-reset-body.html
@@ -2,5 +2,5 @@
 {% load post_office %}
 
 {% block email-logo %}
-<img src="{% inline_image 'dshop/img/logo-dark.png' %}" width="200" style="margin: 20px auto; display: block;" />
+<img src="{% inline_image 'boutique/img/logo-dark.png' %}" width="200" style="margin: 20px auto; display: block;" />
 {% endblock %}
